# SST-Systems_Stress_Tester

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  shell.nix  slint_gui_integration.md
Scripts/: build_profiling.sh  build_release.sh
include/: CPUStressTest.hpp
src/: CPUStressTest.cpp  main_gui.cpp
ui/: stress_test_ui.slint
